--- a/ruby/blackjack/.rubocop.yml
+++ b/ruby/blackjack/.rubocop.yml
@@ -24,3 +24,12 @@ Metrics/LineLength:
 
 Style/Documentation:
   Enabled: false
+
+Metrics/CyclomaticComplexity:
+  Enabled: false
+
+Metrics/AbcSize:
+  Enabled: false
+
+Metrics/MethodLength:
+  Enabled: false
