--- a/ruby/blackjack/Gemfile
+++ b/ruby/blackjack/Gemfile
@@ -4,8 +4,14 @@ source 'https://rubygems.org'
 
 gemspec
 
-group :development do
-  gem 'ruby-lint', require: false
-  gem 'rubocop', require: false
+group :development, :test do
+  gem 'awesome_print', require: false
+  gem 'byebug'
+  gem 'fuubar', require: false
   gem 'guard-rspec', require: false
+  gem 'pry'
+  gem 'pry-byebug'
+  gem 'rubocop', require: false
+  gem 'ruby-lint', require: false
+  gem 'warning', require: false
 end
