--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,7 +1,7 @@
 ---
 engines:
   bundler-audit:
-    enabled: true
+    enabled: false
   duplication:
     enabled: true
     config:
@@ -21,11 +21,11 @@ engines:
     enabled: true
 ratings:
   paths:
-  - Gemfile.lock
-  - "**.rb"
+  - "./ruby/blackjack/Gemfile.lock"
+  - "./ruby/blackjack/**/*.rb"
 exclude_paths:
-- spec/
-- .stash/
-- bin/
-- doc/
-- log/
+- javascript/
+- ruby/where
+- ruby/blackjack/doc/
+- ruby/blackjack/log/
+- ruby/blackjack/spec/
